# Star_War

./: CMakeLists.txt  CMakeLists.txt.AfiovR  Map.cpp  Map.h  README.md  Resource.qrc  bomb.cpp  bomb.h  bullet.h  config.h  enemyplane.cpp  enemyplane.h  mainscreen.cpp  mainscreen.h  mainscreen.ui  plane.rcc
StarWar/StarWar/: CMakeLists.txt  Resource.qrc  bullet.cpp  config.h  heroplane.cpp  heroplane.h  main.cpp  mainscreen.cpp  mainscreen.h
